# philter-rs

./: .gitignore  Cargo.toml  justfile  main.py  pyproject.toml
data/configs/: philter_one.json  philter_zeta.json
data/filters/archived_regex/safe/: dr_safe.txt  page_safe_transformed.txt
data/filters/archived_regex/salutations/: blacklist_comparison1_transformed.txt
data/filters/regex/addresses/: at_street_dash_street.txt  at_street_dash_street_transformed.txt  at_street_number_dash_street.txt  at_street_number_dash_street_transformed.txt  box_room.txt  corner_of_street_&_street.txt  corner_of_street_&_street_transformed.txt  desk_#_transformed.txt  full_street_address.txt  full_street_address_transformed.txt  full_street_address_with_concatenated_indicator.txt  full_street_address_with_concatenated_indicator_transformed.txt  lives_in_transformed.txt  num_streetname.txt  num_streetname_city.txt  num_streetname_city_transformed.txt  num_streetname_extension.txt  num_streetname_extension_transformed.txt  num_streetname_transformed.txt  number_streetname_noindicator_suite.txt  number_streetname_noindicator_suite_transformed.txt  room_box_transformed.txt  short_street_name.txt  short_street_name_transformed.txt  street_&_street.txt  street_&_street_transformed.txt  (+10 more)
data/i2b2_examples/: 110-01.txt  110-02.txt  110-03.txt  110-04.txt  111-01.txt
python/philter_rs/: __init__.py  _prs.pyi  lib.py  old.py  utils.py
python/philter_rs/data/: uw-config.json.gzip
scripts/: update_config.py
src/: bindings.rs  coordinates.rs  filters.rs  lib.rs  processors.rs
(+32 files in other folders)
