[package]
name = "_prs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_prs"
crate-type = ["cdylib"]

[dependencies]
fancy-regex = "0.14.0"
flate2 = "1.1.2"
itertools = "0.14.0"
pyo3 = "0.25.1"
serde_json = "1.0.140"

[features]
# NOT a default feature
extension-module = ["pyo3/extension-module"]
