[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "philter-rs"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "nltk>=3.9.1",
    "pydantic>=2.11.6",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "maturin>=1.8.7",
    "ruff>=0.11.13",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "philter_rs._prs"


[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{ file = "pyproject.toml" }, { file = "Cargo.toml" }, { file = "src/lib.rs" }]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }
